--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-/** 
- * Treehouse FSJS Techdegree
- * Random Quote Generator - CSS
- */
-
 body {
   background-color: #36b55c;
   color: white;
@@ -79,9 +74,9 @@ body {
   margin-left: -6em;
   bottom: 150px;
   border-radius: 4px;
-  border: 2px solid #fff;
-  color: #fff;
-  background-color: #36b55c;
+  border: 2px solid white;
+  color: white;
+  background-color: rgba(70,70,70,.25);
   padding: 15px 0;
   transition: .5s ;
 }
@@ -101,6 +96,12 @@ body {
     font-size: 6rem;
   }
   .source {
+    font-size: 1.25rem;
+  }
+  .country {
+    font-size: 1.25rem;
+  }
+  .industry {
     font-size: 1.25rem;
   }
 }
